# error-tracker

./: docker-compose.yml
api/: Dockerfile  go.mod  go.sum  main.go
api/src/: app.go
api/src/constants/auth_types/: auth_types.go
api/src/controllers/: app_controller.go
api/src/controllers/auth_controller/: auth_controller.go
api/src/controllers/org_controller/: org_controller.go
api/src/controllers/static_controller/: static_controller.go
api/src/db/: db.go
api/src/db/organization_db/: organization_db.go
api/src/db/user_db/: userdb.go
api/src/helpers/: struct_helpers.go
api/src/models/: models.go
api/src/structs/: organization.go  user.go
client/: Dockerfile
client/src/: App.tsx
client/src/context/: StateContext.tsx
client/src/pages/: Dashboard.tsx  Login.tsx  NewOrg.tsx
client/src/styling/: DashboardStyling.tsx  LoginStyling.tsx  NewOrgStyling.tsx
error-processor/: Cargo.toml  go.mod  go.sum  main.go
error-processor/app/: app.go
error-processor/app/db/: db.go
error-processor/app/db/errordao/: errordao.go
error-processor/app/resources/: incoming_errors.go
error-processor/app/structs/: errors.go
error-processor/src/: main.rs
error-processor/src/dao/: error_dao.rs  mod.rs
error-processor/src/resources/: error_resource.rs  mod.rs
error-processor/src/services/: incoming_error.rs  mod.rs
error-processor/src/structs/: error_structs.rs  mod.rs
js-tracker/: package.json
js-tracker/example/: index.html
js-tracker/src/: index.ts
k8s/: main-deployment.yaml  main-node-port.yaml
scripts/: scripts.sql
(+4 files in other folders)
