[package]
name = "error_processor"
version = "0.1.0"
authors = ["Rob Bertram <robert.bertram@livingasone.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "1.0.0"
bson = "1.0.0"